added about me and skill set sections

--- a/src/app/skillset/skillset.component.html
+++ b/src/app/skillset/skillset.component.html
@@ -1,3 +1,15 @@
 <div class="background">
-    <p >skillset works!</p>
+    <span>Skill set</span>
+    <div class="skillIcons">
+        <img src="assets/Angular.png">
+        <img src="assets/TypeScript.png">
+        <img src="assets/JavaScript.png">
+        <img src="assets/HTML.png">
+        <img src="assets/Scrum.png">
+        <img src="assets/Firebase.png">
+        <img src="assets/Git.png">
+        <img src="assets/CSS.png">
+        <img src="assets/RestApi.png">
+        <img src="assets/MaterialDesign.png">
+    </div>
 </div>
