--- a/src/app/skillset/skillset.component.scss
+++ b/src/app/skillset/skillset.component.scss
@@ -1,7 +1,30 @@
 .background{
-    min-height: 500px;
+    color: white;
    background: #184aff;
     background: -webkit-linear-gradient(0deg, #184aff 0%, rgba(66, 139, 255, 0.84) 100%);
     background: linear-gradient(-50deg, #184aff 0%, rgba(66, 139, 255, 0.84) 100%); 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: hidden;
+    span{
+        padding-top: 50px;
+        font-size: 80px;
+        font-weight: 700;
+    }
+    .skillIcons{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        width: 60vw;
+        padding-bottom: 50px;
+        img{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 40px;
+        }
+    }
 }
     
