--- a/src/app/head-section/head-section.component.html
+++ b/src/app/head-section/head-section.component.html
@@ -13,6 +13,10 @@
           <span>FRONTEND</span>  
           <span>DEVELOPER</span>  
         </div>
+        <div class="scroll">
+          <span>Scroll</span>
+          <div class="bar"></div>
+        </div>
     </div>
     
     <div class="imgBg"></div>
