added contact form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,5 @@
 <app-about-me></app-about-me>
 <app-skillset></app-skillset>
 <app-my-work></app-my-work>
+<app-contact-form></app-contact-form>
+<app-footer></app-footer>
