--- a/src/app/my-work/my-work.component.scss
+++ b/src/app/my-work/my-work.component.scss
@@ -40,11 +40,12 @@
             button{ 
                 height: 60px;
                 width: 120px;
-                border: 2px solid black;
+                border: 1px solid black;
                 border-radius: 10px;
                 background-color: transparent;
                 font-size: 20px;
                 font-weight: 700;
+                cursor: pointer;
                 &:hover{
                     background-color: rgb(97, 132, 247);
                     color: white;
