--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
-@font-face {
-    font-family: 'Montserrat';
-    src: url('/src/assets/Montserrat-VariableFont_wght.ttf');
-}
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
   
   
 body{
     margin: 0;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Montserrat';
 }
