added contact form

--- a/src/app/contact-form/contact-form.component.scss
+++ b/src/app/contact-form/contact-form.component.scss
@@ -1,6 +1,10 @@
 .contactForm{
     width: 80vw;
     margin: 5vh 10vw ;
+    h2{
+        font-size: 80px;
+        font-weight: 600;
+    }
     .formBlock{
         display: flex;
         justify-content: center;
