--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -3,15 +3,9 @@
         Let´s work together
     </span>
     <span class="about">
-        Hey, I'm Patrick, a Frontend Developer from Lüdenscheid in the beautiful Sauerland region.<br><br>
-         I am passionate about bringing websites and applications to life and creating user-friendly interfaces.
-        Programming is my great passion. I love diving into the code and finding creative solutions to complex problems. With my solid knowledge in HTML, CSS, and JavaScript, I am able to develop appealing and interactive websites that are both aesthetically pleasing and functional.
-        <br><br>
-        Problem-solving is an exciting process for me. I have learned to approach challenges with a positive mindset and find efficient solutions. Flexibility and the ability to quickly adapt to new technologies and frameworks are among my strengths.
-        As a Frontend Developer, it is important for me to work with a user-centered approach. I have a good sense of design and can translate complex concepts into user-friendly interfaces. I particularly enjoy collaborating with designers and backend developers, as I thrive in an agile team environment and enjoy sharing my knowledge to deliver the best possible end product.
-        In addition to my technical expertise, I am also a team player and value communication and collaboration with others.<br><br>
-        I am open to new ideas and committed to continuous self-improvement to stay up-to-date with the latest developments in frontend development.
-        I am excited to take on new projects and utilize my skills as a Frontend Developer. If you are looking for a dedicated developer who approaches work with passion and creativity, I am at your service. Let's collaborate to bring your vision to reality!
-
+        Hey, Patrick, a frontend developer from the beautiful Sauerland region. 
+        <br><br> My passion lies in designing websites and applications with user-friendly interfaces. With my extensive knowledge in HTML, CSS, and JavaScript, I develop appealing and functional websites.
+        <br><br> Problem-solving is an exciting process for me, where I find creative solutions. I am adaptable and quickly pick up new technologies and frameworks. As a frontend developer, I prioritize a user-centered approach and can translate complex concepts into user-friendly interfaces.
+        <br><br> Collaboration within a team is important to me as I enjoy sharing my knowledge to deliver the best end product. In addition to my solid expertise, I am a team player and open to new ideas. I look forward to utilizing my skills to lead your projects to success.
     </span>
 </div>
