--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -2,11 +2,13 @@
     display: flex;
     padding: 50px 100px;
     align-items: center;
+    gap: 50px;
 }
 .letsWork{
     font-size: 80px;
     font-weight: 600;
     width: 50%;
+    color: rgb(105, 105, 105);
 
 }
 .about{
