--- a/src/app/head-section/head-section.component.html
+++ b/src/app/head-section/head-section.component.html
@@ -1,15 +1,16 @@
 <div class="fullsite">
   <div class="herosection">
 
-
+    
     <div class="headlineLinks">
         <a href="#">About me</a>
         <a href="#">Skill set</a>
         <a href="#">My work</a>
     </div>
+    <img src="assets/Portfolio Bilder00533 Kopie.png">
     <div>
         <div class="tagline" style="justify-content: flex-end;">
-          <span style="font-weight: 100; font-size: 60px;">Hello! I am Patrick</span>
+          <span style="font-weight: 100; font-size: 6.5vh;">Hello! I am Patrick</span>
           <span>FRONTEND</span>  
           <span>DEVELOPER</span>  
         </div>
