--- a/src/app/contact-form/contact-form.component.scss
+++ b/src/app/contact-form/contact-form.component.scss
@@ -4,6 +4,7 @@
     h2{
         font-size: 80px;
         font-weight: 600;
+        color: rgb(105, 105, 105);
     }
     .formBlock{
         display: flex;
@@ -39,7 +40,7 @@
                 border-radius: 10px;
                 background-color: transparent;
                 font-size: 20px;
-                font-weight: 700;
+                font-weight: 500;
                 cursor: pointer;
                 &:hover{
                     background-color: rgb(97, 132, 247);
