added scroll behavor

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-head-section></app-head-section>
-<app-about-me></app-about-me>
-<app-skillset></app-skillset>
-<app-my-work></app-my-work>
-<app-contact-form></app-contact-form>
+<app-about-me id="about"></app-about-me>
+<app-skillset id="skill"></app-skillset>
+<app-my-work id="work"></app-my-work>
+<app-contact-form id="contact"></app-contact-form>
 <app-footer></app-footer>
