--- a/src/app/contact-form/contact-form.component.scss
+++ b/src/app/contact-form/contact-form.component.scss
@@ -32,6 +32,7 @@
                 border-radius: 10px;
                 width: 40vw;
                 height: 150px;
+                resize: none;
             }
             #btn{
                 height: 60px;
