--- a/src/app/head-section/head-section.component.scss
+++ b/src/app/head-section/head-section.component.scss
@@ -10,7 +10,7 @@
     margin: 0 10%;
     display: flex;
     position: relative;
-    img{
+    .portrait{
         position: absolute;
         z-index: 1;
         bottom: 0;
@@ -39,6 +39,7 @@
     gap: 20px;
     font-size: 20px;
     a{
+        cursor: pointer;
         text-decoration: none;
         color: black;
         &:hover{
@@ -75,5 +76,19 @@
     span{
         font-size: 3vh;
         margin-bottom: 2vh;
+    }
+}
+.linkIcons{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    right: 2vw;
+    bottom: 4vh;
+    
+    .icons{
+        cursor: pointer;
+        height:6vh ;
+        width: 6vh;
     }
 }
