--- a/src/app/head-section/head-section.component.scss
+++ b/src/app/head-section/head-section.component.scss
@@ -90,5 +90,8 @@
         cursor: pointer;
         height:6vh ;
         width: 6vh;
+        &:hover{
+           transform: translateX(-0.7vw);
+        }
     }
 }
