--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,3 +9,23 @@ body{
 html {
     scroll-behavior: smooth;
   }
+
+  
+  /* width */
+    ::-webkit-scrollbar {
+    width: 10px;
+  }
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 8px;
+  }
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background:  #4f75ff; 
+    border-radius: 10px;
+  }
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background:  #3557cf; 
+  }
