added button in about me section

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,10 +22,10 @@ html {
   }
   /* Handle */
   ::-webkit-scrollbar-thumb {
-    background:  #4f75ff; 
+    background:  #9c9c9c; 
     border-radius: 10px;
   }
   /* Handle on hover */
   ::-webkit-scrollbar-thumb:hover {
-    background:  #3557cf; 
+    background:  #8e8e8f; 
   }
