--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -13,5 +13,25 @@
 }
 .about{
     font-size: 20px;
+}
+.btnTextWrap{
     width: 50%;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    align-items: center;
+}
+.btn{
+    height: 60px;
+    width: 180px;
+    border: 1px solid black;
+    border-radius: 10px;
+    background-color: transparent;
+    font-size: 20px;
+    font-weight: 500;
+    cursor: pointer;
+    &:hover{
+        background-color: rgb(97, 132, 247);
+        color: white;
+    }
 }
