--- a/src/app/head-section/head-section.component.html
+++ b/src/app/head-section/head-section.component.html
@@ -3,7 +3,7 @@
   <div class="herosection">
 
     
-    <div class="headlineLinks">
+    <div class="headlineLinks hideMobile">
         <a (click)="scrollToTarget('about')">About me</a>
         <a (click)="scrollToTarget('skill')">Skill set</a>
         <a (click)="scrollToTarget('work')">My work</a>
@@ -12,16 +12,16 @@
     <img class="portrait" src="assets/Portfolio Bilder00533 Kopie.png">
     <div>
         <div class="tagline" style="justify-content: flex-end;">
-          <span style="font-weight: 100; font-size: 6.5vh;">Hello! I am Patrick</span>
+          <span class="hello">Hello! I am Patrick</span>
           <span>FRONTEND</span>  
           <span>DEVELOPER</span>  
         </div>
-        <div class="scroll">
+        <div class="scroll hideMobile">
           <span>Scroll</span>
           <div class="bar"></div>
         </div>
     </div>
-    <div class="linkIcons">
+    <div class="linkIcons hideMobile">
       <img class="icons" (click)="link('https://www.github.com/PatrickBerndt/')" src="assets/Github button s2.png">
       <img class="icons" (click)="scrollToTarget('contact')" src="assets/Email button s2.png">
       <img class="icons" (click)="link('https://www.linkedin.com/in/patrick-berndt-924975281/')" src="assets/Linkedin button s2.png">
