--- a/src/app/head-section/head-section.component.scss
+++ b/src/app/head-section/head-section.component.scss
@@ -2,6 +2,7 @@
     background: #f0f3ff;
     background: -webkit-linear-gradient(0deg, #f0f3ff 0%, rgba(255, 255, 255, 0.84) 100%);
     background: linear-gradient(0deg, #f0f3ff 0%, rgba(255, 255, 255, 0.84) 100%);
+    overflow: hidden;
 }
 
 .herosection{
@@ -22,13 +23,16 @@
 .tagline{
     position: absolute;
     top: 30vh;
-    right: 3%;
+    right: 0%;
     font-size: 9vh;
     display: flex;
     flex-direction: column;
     font-weight: 600;
     z-index: 1;
-    color: rgb(105, 105, 105);
+    color: rgb(0, 0, 0);
+    .hello{
+        font-weight: 100; font-size: 6.5vh;
+    }
 }
 .headlineLinks{
     width: 100%;
@@ -94,4 +98,32 @@
            transform: translateX(-0.7vw);
         }
     }
+}
+@media (max-width: 1400px){
+    .herosection{
+        width: 90%;
+        margin: 0 5%;
+    }
+}
+@media (max-width: 1150px){
+    .hideMobile{
+        display: none !important;
+    }
+    .herosection{
+        .portrait{
+        height: 70vh;
+        left: 50%;
+        transform: translateX(-50%);
+        }
+    }
+    .tagline{
+        top: 5%;
+        left: 40%;
+        transform: translateX(-50%);
+        font-size: 7vh;
+        .hello{
+            font-weight: 100; font-size: 4.5vh;
+        }
+    }
+    
 }
