--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -7,11 +7,11 @@
             <span id="bottomLine">Need a Frontend developer? <b>Contact me!</b></span>
         </div>
         <div class="formArea">
-            <form class="text center" action="" method="post" >
-                <input type="text" required placeholder="Your name" name="" id="name">
-                <input type="text" required placeholder="Your email" name=""  id="email">
-                <textarea placeholder="Your massage" required name="" id="massage" cols="30" rows="10"></textarea>
-                <button id="btn">Say hello ;)</button>
+            <form class="text center" action="https://www.patrickberndt.de/sendmail/send_mail.php" method="POST" >
+                <input type="text" required placeholder="Your name" name="name" id="name">
+                <input type="text" required placeholder="Your email" name="email"  id="email">
+                <textarea placeholder="Your message" required name="message" id="message" cols="30" rows="10"></textarea>
+                <button type="submit" id="btn">Say hello ;)</button>
             </form>
             
         </div>
