--- a/src/app/head-section/head-section.component.html
+++ b/src/app/head-section/head-section.component.html
@@ -2,16 +2,16 @@
 <div class="fullsite">
   <div class="herosection">
 
-    
+    <div class="imgBg"></div>
     <div class="headlineLinks hideMobile">
         <a (click)="scrollToTarget('about')">About me</a>
         <a (click)="scrollToTarget('skill')">Skill set</a>
         <a (click)="scrollToTarget('work')">My work</a>
     </div>
-    <div class="imgBg"></div>
+   
     <img class="portrait" src="assets/Portfolio Bilder00572 Kopie.png">
     <div>
-        <div class="tagline" style="justify-content: flex-end;">
+        <div class="tagline" >
           <span class="hello">Hello! I am Patrick</span>
           <span>FRONTEND</span>  
           <span>DEVELOPER</span>  
