--- a/src/app/my-work/my-work.component.scss
+++ b/src/app/my-work/my-work.component.scss
@@ -105,3 +105,13 @@
         text-align: unset;
     }
 }
+@media ( max-width: 700px){
+    .myWork{
+       
+        h2{
+            font-size: 40px;
+            
+        }
+       
+    }
+}
