popup menu under constuction

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-popup-menu class="popupMenu" [ngStyle]="{'width': isOpen==true ? 'unset' : '20%'}"></app-popup-menu>
 <app-head-section></app-head-section>
 <app-about-me id="about"></app-about-me>
 <app-skillset id="skill"></app-skillset>
