--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -4,7 +4,7 @@
     </span>
     <div class="btnTextWrap">
         <span class="about">
-            Hey, Patrick, a frontend developer from the beautiful Sauerland region. 
+            Hey i`m Patrick, a frontend developer from the beautiful Sauerland region. 
             <br><br> My passion lies in designing websites and applications with user-friendly interfaces. With my extensive knowledge in HTML, CSS, and JavaScript, I develop appealing and functional websites.
             <br><br> Problem-solving is an exciting process for me, where I find creative solutions. I am adaptable and quickly pick up new technologies and frameworks. As a frontend developer, I prioritize a user-centered approach and can translate complex concepts into user-friendly interfaces.
             <br><br> Collaboration within a team is important to me as I enjoy sharing my knowledge to deliver the best end product. In addition to my solid expertise, I am a team player and open to new ideas. I look forward to utilizing my skills to lead your projects to success.
