--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,13 @@
 .popupMenu{
+    display: none;
     position: fixed;
     z-index: 10;
     top: 0;
     bottom: 0;
-    
     right: 0;
+}
+@media(max-width: 1000px){
+    .popupMenu{
+       display: block;
+    }
 }
