--- a/src/app/popup-menu/popup-menu.component.scss
+++ b/src/app/popup-menu/popup-menu.component.scss
@@ -12,7 +12,7 @@
     justify-content: center;
     gap: 50px;
     width: 100%;
-    background-color: rgba(128, 128, 128, 0.199);
+    background-color: rgba(175, 175, 175, 0.466);
     backdrop-filter: blur(10px);
     z-index: 10;
     position: absolute;
@@ -21,8 +21,11 @@
     bottom: 0;
     a{
         cursor: pointer;
+        font-weight: 600;
+        font-size: 20px;
     }
     img{
         cursor: pointer;
+        height: 50px;
     }
 }
