--- a/src/app/contact-form/contact-form.component.scss
+++ b/src/app/contact-form/contact-form.component.scss
@@ -9,10 +9,14 @@
     .formBlock{
         display: flex;
         justify-content: center;
-        align-items: center;
+        align-items: flex-start;
         gap: 80px;
         .text{
-            
+            #topLine{
+                font-size: 25px;
+                font-weight: 500;
+                color:rgb(97, 132, 247) ;
+            }
             display: flex;
             flex-direction: column;
             gap: 20px;
@@ -43,12 +47,17 @@
                 font-size: 20px;
                 font-weight: 500;
                 cursor: pointer;
+                transition: all 125ms ease-out;
+                transform: scale(1);
                 &:hover{
-                    background-color: rgb(97, 132, 247);
+                    transition: all 125ms ease-out;
+                    transform: scale(1.1);
+                    background: -webkit-linear-gradient(0deg, #184aff 0%, rgba(66, 139, 255, 0.84) 100%);
+                    background: linear-gradient(-50deg, #184aff 0%, rgba(66, 139, 255, 0.84) 100%); 
+                    border: #184aff;
                     color: white;
                 }
             }
-            
         }
     }
 }
@@ -56,12 +65,13 @@
     align-items: center;
 }
 .dots-bounce {
-    --un-icon: url("data:image/svg+xml;utf8,%3Csvg viewBox='0 0 24 24' width='1.2em' height='1.2em' xmlns='http://www.w3.org/2000/svg' %3E%3Ccircle cx='4' cy='12' r='3' fill='currentColor'%3E%3Canimate id='svgSpinners3DotsBounce0' attributeName='cy' begin='0;svgSpinners3DotsBounce1.end+0.25s' calcMode='spline' dur='0.6s' keySplines='.33,.66,.66,1;.33,0,.66,.33' values='12;6;12'/%3E%3C/circle%3E%3Ccircle cx='12' cy='12' r='3' fill='currentColor'%3E%3Canimate attributeName='cy' begin='svgSpinners3DotsBounce0.begin+0.1s' calcMode='spline' dur='0.6s' keySplines='.33,.66,.66,1;.33,0,.66,.33' values='12;6;12'/%3E%3C/circle%3E%3Ccircle cx='20' cy='12' r='3' fill='currentColor'%3E%3Canimate id='svgSpinners3DotsBounce1' attributeName='cy' begin='svgSpinners3DotsBounce0.begin+0.2s' calcMode='spline' dur='0.6s' keySplines='.33,.66,.66,1;.33,0,.66,.33' values='12;6;12'/%3E%3C/circle%3E%3C/svg%3E");
+    --un-icon: url("data:image/svg+xml;utf8,%3Csvg viewBox='0 0 24 24' width='1.2em' height='1.2em' xmlns='http://www.w3.org/2000/svg' %3E%3Cg fill='none' stroke='currentColor' stroke-linecap='round' stroke-linejoin='round' stroke-width='2'%3E%3Cpath stroke-dasharray='60' stroke-dashoffset='60' d='M3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12Z'%3E%3Canimate fill='freeze' attributeName='stroke-dashoffset' dur='0.5s' values='60;0'/%3E%3C/path%3E%3Cpath stroke-dasharray='14' stroke-dashoffset='14' d='M8 12L11 15L16 10'%3E%3Canimate fill='freeze' attributeName='stroke-dashoffset' begin='0.6s' dur='0.2s' values='14;0'/%3E%3C/path%3E%3C/g%3E%3C/svg%3E");
     -webkit-mask: var(--un-icon) no-repeat;
     mask: var(--un-icon) no-repeat;
     -webkit-mask-size: 100% 100%;
     mask-size: 100% 100%;
-    background-color:  rgb(97, 132, 247);
+    background: -webkit-linear-gradient(0deg, #184aff 0%, rgba(66, 139, 255, 0.84) 100%);
+    background: linear-gradient(-50deg, #184aff 0%, rgba(66, 139, 255, 0.84) 100%); 
     color:  rgb(97, 132, 247);
     width: 1.2em;
     height: 1.2em;
@@ -69,34 +79,23 @@
 
 @media (max-width: 700px){
     .contactForm{
-       
         h2{
             font-size: 40px;
-           
         }
         .formBlock{
            
             flex-direction: column;
             gap: 50px;
-            .text{
-              
-            }
+            
             .formArea{
                 width: 80%;
-                
                 input{
                     width: 80vw;
-                    
                 }
                 textarea{
-                   
                     width: 80vw;
-                    
                 }
-               
-                
             }
         }
     }
-
 }
