--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -5,6 +5,7 @@
         <img src="assets/Email button w.png">
         <img (click)="link('https://www.linkedin.com/in/patrick-berndt-924975281/')" src="assets/Linkedin button w.png">
     </div>
+    <span class="link" (click)="toggleImpressum()">Impressum</span>
 
 
 </div>
