--- a/src/app/contact-form/contact-form.component.scss
+++ b/src/app/contact-form/contact-form.component.scss
@@ -12,14 +12,15 @@
         align-items: flex-start;
         gap: 80px;
         .text{
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
             #topLine{
                 font-size: 25px;
                 font-weight: 500;
                 color:rgb(97, 132, 247) ;
             }
-            display: flex;
-            flex-direction: column;
-            gap: 20px;
+            
         }
         .formArea{
             width: 50%;
@@ -85,6 +86,7 @@
         .formBlock{
            
             flex-direction: column;
+            align-items: center;
             gap: 50px;
             
             .formArea{
