--- a/src/app/my-work/my-work.component.scss
+++ b/src/app/my-work/my-work.component.scss
@@ -14,7 +14,7 @@
     display: flex;
     align-items: flex-end;
     gap: 50px;
-    margin: 100px 0;
+    margin: 100px ;
     .textBlock{
         display: flex;
         flex-direction: column;
@@ -79,7 +79,7 @@
         flex-direction: column;
         align-items: center;
        
-        margin: 5% 0;
+        margin: 80px 0;
         .textBlock{
             align-items: center;
             .text{
