--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -11,7 +11,8 @@
                 <input type="text" required  placeholder="Your name" name="name" [(ngModel)]="name" id="name" >
                 <input type="text" required placeholder="Your email" name="email" [(ngModel)]="email" id="email">
                 <textarea placeholder="Your message" required name="message" id="message" cols="30" rows="10" [(ngModel)]="message"></textarea>
-                <button type="submit" *ngIf="!isSending" id="btn">Say hello ;)</button>
+                <button type="submit" *ngIf="!isSending && !sendingOk" id="btn">Say hello ;)</button>
+                <button  *ngIf="sendingOk" id="btn-blue">Thank`s for your mail</button>
                 <button [disabled]="isSending" class="dots-bounce" style="background-color: rgb(97, 132, 247)" *ngIf="isSending" id="btn"></button>
             </form>
             
