--- a/src/app/contact-form/contact-form.component.scss
+++ b/src/app/contact-form/contact-form.component.scss
@@ -1,3 +1,9 @@
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    font-family: 'Montserrat';
+    padding-left: 10px;
+    padding-top: 5px;
+    
+  }
 .contactForm{
     width: 80vw;
     margin: 5vh 10vw ;
@@ -58,6 +64,18 @@
                     border: #184aff;
                     color: white;
                 }
+            }
+            #btn-blue{
+                height: 60px;
+                width: 300px;
+                border-radius: 10px;
+                background-color: transparent;
+                font-size: 20px;
+                font-weight: 500;
+                background: -webkit-linear-gradient(0deg, #184aff 0%, rgba(66, 139, 255, 0.84) 100%);
+                background: linear-gradient(-50deg, #184aff 0%, rgba(66, 139, 255, 0.84) 100%); 
+                border: #184aff;
+                color: white;
             }
         }
     }
