--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,17 +2,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
   
   
-body{
-    margin: 0;
-    font-family: 'Montserrat';
-}
-html {
-    scroll-behavior: smooth;
+  body{
+      margin: 0;
+      font-family: 'Montserrat';
+  }
+  html {
+      scroll-behavior: smooth;
+    }
+
+  input{
+    font-family:inherit;
+    padding-left: 15px;
+      
+  }
+  textarea{
+    font-family:inherit;
+    padding-left: 15px;
+    padding-top: 7px;
   }
 
+  ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    font-family: 'Montserrat';
+  }
   
   /* width */
-    ::-webkit-scrollbar {
+  ::-webkit-scrollbar {
     width: 10px;
   }
   /* Track */
