--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -9,7 +9,7 @@
             <br><br> Problem-solving is an exciting process for me, where I find creative solutions. I am adaptable and quickly pick up new technologies and frameworks. As a frontend developer, I prioritize a user-centered approach and can translate complex concepts into user-friendly interfaces.
             <br><br> Collaboration within a team is important to me as I enjoy sharing my knowledge to deliver the best end product. In addition to my solid expertise, I am a team player and open to new ideas. I look forward to utilizing my skills to lead your projects to success.
         </span>
-        <button (click)="scrollToTarget('contact')" class="btn">Send a massage</button>
+        <button (click)="scrollToTarget('contact')" class="btn">Send a message</button>
     </div>
     
 </div>
