updated picture format

--- a/src/app/head-section/head-section.component.html
+++ b/src/app/head-section/head-section.component.html
@@ -9,7 +9,7 @@
         <a (click)="scrollToTarget('work')">My work</a>
     </div>
    
-    <img class="portrait" src="assets/Portfolio Bilder00572 Kopie.png">
+    <img class="portrait" src="assets/Portfolio Bilder00572 Kopie.webp">
     <div>
         <div class="tagline" >
           <span class="hello">Hello! I am Patrick</span>
